# Crystal-Engine

./: CMakeLists.txt  Crystal.sln
Crystal/: CMakeLists.txt  ComputeMipMaps.h  ComputeMipsPass.cpp  ComputeMipsPass.h  Crystal.cpp  Crystal.vcxproj  Crystal.vcxproj.filters
Crystal/Core/: Application.cpp  Application.h
Crystal/Core/CLI/: Console.cpp  Console.h
Crystal/Core/ECS/: Component.h  Entity.h
Crystal/Core/Exceptions/: CrystalException.cpp  CrystalException.h
Crystal/Core/FileSystem/: FileSystem.cpp  FileSystem.h
Crystal/Core/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Crystal/Core/InstructionSet/: CpuInfo.cpp  CpuInfo.h  InstructionSet.cpp  InstructionSet.h
Crystal/Core/Lib/: CrystalTypes.h  FixedString.h  ThreadSafeQueue.h  type_traits.h
Crystal/Core/Logging/: ConsoleSink.cpp  ConsoleSink.h  LogLevels.h  Logger.cpp  Logger.h  ManagedLoggerSink.cpp  ManagedLoggerSink.h  Sink.cpp  Sink.h
Crystal/Core/Math/: Common.h  MathFunctions.h  MathFunctions.ixx  Matrix.h  Quaternion.cpp  Quaternion.h  RNG.h  Rectangle.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Crystal/Core/Memory/: MemoryConstants.h
Crystal/Core/Time/: CrystalTimer.cpp  CrystalTimer.h  Time.h
Crystal/Core/Utils/: LogUtils.h  StringUtils.h
Crystal/Graphics/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Viewport.h
Crystal/Graphics/Shaders/: ComputeMipMaps.hlsl
Crystal/Graphics/Types/: Types.h
Crystal/Networking/: NamedPipeClient.cpp  NamedPipeClient.h
Crystal/Platform/Windows/: CrystalWindow.h  MessageBox.h  Types.h  Window.cpp  Window.h
Crystal/RHI/: Buffer.h  CommandContext.h  PipelineState.h  RHICore.h  RenderTarget.h  RootSignature.h  SwapChain.h  Texture.h  VertexTypes.h
Crystal/RHI/D3D12/: D3D12Buffer.cpp  D3D12Buffer.h  D3D12CommandContext.cpp  D3D12CommandContext.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12Core.cpp  D3D12Core.h  D3D12DescriptorHeap.cpp  D3D12DescriptorHeap.h  D3D12DynamicDescriptorHeap.cpp  D3D12DynamicDescriptorHeap.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12RenderTarget.cpp  D3D12RenderTarget.h  D3D12RootSignature.cpp  D3D12RootSignature.h  D3D12SwapChain.cpp  D3D12SwapChain.h  D3D12Texture.cpp  D3D12Texture.h  D3D12VertexType.h  LinearAllocator.cpp  LinearAllocator.h
Crystal/RHI/D3D12/Managers/: TextureManager.cpp  TextureManager.h
Crystal/RHI/D3D12/Utils/: D3D12Exception.cpp  D3D12Exception.h  ResourceStateTracker.cpp  ResourceStateTracker.h  d3dx12.h
CrystalDll/: CMakeLists.txt  CrystalApi.cpp  CrystalApi.h  CrystalDll.vcxproj  CrystalDll.vcxproj.filters  dllmain.cpp
CrystalEditor/: App.xaml  App.xaml.cs  CrystalEditor.csproj  MainWindow.xaml  MainWindow.xaml.cs
CrystalEditor/API/: EngineAPI.cs
CrystalEditor/Dictionaries/: ThemeColors.xaml
CrystalEditor/GameProject/: ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs
CrystalEditor/Managers/: LogManager.cs
CrystalEditor/Networking/: NamedPipeServer.cs
CrystalEditor/Properties/: launchSettings.json
CrystalEditor/Utils/: CpuInfo.cs  Logger.cs  LoggerView.xaml  LoggerView.xaml.cs
CrystalEditor/Utils/Extensions/: QueueExtensions.cs  StreamExtensions.cs
CrystalEditor/Utils/RenderingSurface/: RenderSurface.cs  RenderSurfaceView.xaml  RenderSurfaceView.xaml.cs
CrystalSandbox/: CMakeLists.txt  Main.cpp
